fixed alignment of header h1 in pages

--- a/style.css
+++ b/style.css
@@ -197,4 +197,8 @@ p {
 		border-radius: 0px;
 		border-width: 1px 0px 1px 0px;
 	}
+
+	header h1 {
+		width: 100%;
+	}
 }
